# RoxAutoScript

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: autonomy-loop.yml
assets/ui/: operator_console.qss
docs/: architecture-contracts.md  autonomy-loop.md  codex-subscription-setup.md  dispatch-workflow.md  engine-roster.md  guild-order-material-logic-plan.md  merchant-commission-exploration-plan.md  plain-language-glossary.md  round-5-claim-rewards-real-flow.md  round-6-claim-rewards-production-hardening.md  round-7-claim-rewards-live-production.md  round-8-claim-rewards-four-device-capture.md  round-9-guild-order-material-logic.md  route-a-claim-rewards-parallel-plan.md  rox-mvp-plan.md  worktree-playbook.md  worktree-reset-inventory-2026-04-25.md
docs/handoffs/: autonomy-loop.md  branch-model-feature-first.md  claim-rewards-goldens.md  core-runtime-claim-rewards.md  core-runtime-orchestration.md  core-runtime-recovery.md  gui-console-operator.md  guild-order-material-logic-goldens.md  live-entry-route-recon-2026-04-25.md  merchant-commission-exploration.md  merchant-commission-meow-active-loop-2026-04-24.md  merchant-commission-meow-full-route-2026-04-25.md  merchant-commission-meow-runtime-slice-2026-04-25.md  round-9-guild-order-closure.md  shared-entry-navigation-2026-04-25.md  task-daily-ui-claim-rewards.md  task-daily-ui-foundations.md  (+6 more)
scripts/: bootstrap-dev.ps1  bootstrap-four-engines.ps1  new-worktree.ps1  run-autonomy-loop.ps1  run-guild-order-current-panel.py
tests/: _bootstrap.py
(+130 files in other folders)
