[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roxautoscript"
version = "0.1.0"
description = "ROX multi-instance automation control center foundation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "Codex" }
]
dependencies = []

[project.optional-dependencies]
gui = [
  "PySide6>=6.8,<7",
]
device = [
  "adbutils>=2.8,<3",
]
vision = [
  "numpy>=2.0,<3",
  "opencv-python>=4.10,<5",
]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.6,<1",
]
all = [
  "PySide6>=6.8,<7",
  "adbutils>=2.8,<3",
  "numpy>=2.0,<3",
  "opencv-python>=4.10,<5",
  "pytest>=8.3,<9",
  "ruff>=0.6,<1",
]

[project.scripts]
roxauto = "roxauto.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

